# SmartOperationsAssistant

./: TODO.md  docker-compose.yml  fix_milvus.py  learning.md  project-code-summary-and-rebuild-guide.md  pyproject.toml  run.ps1  学习.md
F%3A/develop/agent/SmartOperationsAssistant/app/skills/definitions/generic_oncall/: SKILL.md
app/: main.py
app/agents/: graph.py  main.py
app/api/v1/: aiops.py  chat.py  health.py  knowledge.py
app/config/: config.py
app/core/: embedding.py  hybrid_retriever.py  llm.py  mcp_client.py  milvus.py  reranker.py  structured.py  vector_store.py  web_search.py
app/runtime/: agent_harness.py  stream_sink.py  transitions.py
app/schemas/: chat.py  knowledge.py
app/services/: chat_memory.py  rag_service.py
app/services/rag/: document_processor.py  memory.py  retrieval.py  utils.py  web_context.py
app/skills/: loader.py  models.py  registry.py
app/skills/definitions/generic_oncall/: SKILL.md
app/skills/definitions/host_resource_diagnosis/: SKILL.md
app/tools/: knowledge_tool.py  mcp_loader.py  meta.py  system_tool.py  time_tool.py  weather_tool.py
frontend/: chat.html  index.html  knowledge.html
mcp_servers/: docker_server.py  network_server.py  system_server.py
