[project]
name = "smartoperationsassistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "openai>=2.36.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
