[project]
name = "smartoperationsassistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.1",
    "fastmcp>=2.12.4",
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "path>=17.1.1",
    "psutil>=7.2.2",
    "pydantic-settings>=2.14.1",
    "pymilvus>=3.0.0",
    "python-dotenv>=1.2.2",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
    "websockets>=10,<14",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
